# gesture-tv-remote

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  config_server.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docs/: AGENTS.md  architecture.md  configuration.md  development.md  gesture-state-machine.md  gestures.md  runtime-pipeline.md  tv-adapter-capabilities.md
scripts/: analyze_gesture_log.py  quality.py
src/: AGENTS.md
src/api/: app.py  config_server.py  config_web.py
src/app/: main.py
src/domain/: activation_tracker.py  command_decision.py  commands.py  constants.py  gesture_classification.py  gesture_history.py  gesture_preprocessing.py  gestures.py  landmark_projection.py  landmarks.py  motion_filter.py  motion_gesture.py  session.py  session_components.py  session_debug.py  session_state.py  session_types.py
src/infrastructure/: android_tv_remote.py  androidtv_remote.py  camera_zoom.py  crop_geometry.py  hand_model.py  hand_tracking.py  landmark_projection.py  roku_remote.py  samsung_remote.py  tv_command_translation.py  tv_remote.py  tv_remote_factory.py  video_overlay.py  video_preprocessing.py  webos_remote.py
src/runtime/: __init__.py  browser_control_app.py  build_web.py  cli.py  config_server.py  container.py  gesture_app.py  local_gesture_app.py  web_app.py
src/services/: gesture_remote_service.py  pipeline_metrics.py  remote_command_dispatcher.py  voice_capture.py
src/shared/: config.py  logging.py
src/web/: __init__.py  app.py  assets.py  config_app.py  config_forms.py  config_templates.py  config_view.py  control_app.py  control_templates.py  rendering.py  static_files.py
tests/: AGENTS.md  config_helpers.py  session_helpers.py  test_app_config.py  test_application_ports.py  test_command_decision.py  test_config.py  test_config_repository.py  test_config_web.py  test_gesture_history.py  test_gesture_remote_service.py  test_gestures.py  test_hand_model.py  test_mdns.py  test_motion_filter.py  test_runtime_cli.py  test_session.py  test_session_activation.py  test_session_distance.py  test_session_evaluators.py  test_session_phase_evaluators.py  test_session_pointer.py  test_session_volume.py  test_session_wave.py  test_tv_remote.py  test_video_overlay.py  test_video_preprocessing.py  test_voice_capture.py
tests/application/: test_application_ports.py  test_gesture_remote_service.py  test_text_input_service.py
tests/architecture/: test_layer_boundaries.py
tests/domain/: test_command_decision.py  test_gesture_history.py  test_gesture_preprocessing.py  test_gestures.py  test_motion_filter.py  test_session_activation.py  test_session_evaluators.py  test_session_phase_evaluators.py  test_session_pointer.py  test_session_volume.py  test_session_wave.py
tests/fakes/: __init__.py  fake_application_adapters.py  fake_config_provider.py  fake_frame_source.py  fake_hand_tracker.py  fake_logger.py  fake_tv_remote.py
tests/helpers/: session_helpers.py
tests/infrastructure/: test_browser_capture.py  test_browser_debug_display.py  test_config_repository.py  test_debug_stream.py  test_hand_model.py  test_mac_address.py  test_mdns.py  test_tv_remote.py  test_video_overlay.py  test_video_preprocessing.py  test_voice_capture.py  test_wake_on_lan.py  test_web_tls.py
(+145 files in other folders)
