[project]
name = "gesture-tv-remote"
version = "0.1.0"
description = "Gesture-controlled smart TV remote built with webcam hand tracking."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiowebostv",
    "androidtvremote2",
    "aiohttp",
    "aiortc",
    "mediapipe",
    "opencv-python",
    "rokuecp",
    "samsungtvws",
    "sounddevice",
    "zeroconf",
]

[dependency-groups]
dev = [
    "black",
    "mypy",
    "ruff",
]

[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
files = ["src", "tests"]
