[project]
name = "gesture-tv-remote"
version = "0.1.0"
description = "Gesture-controlled smart TV remote built with webcam hand tracking."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiowebostv",
    "androidtvremote2",
    "aiohttp",
    "aiortc",
    "cryptography",
    "jinja2",
    "markupsafe",
    "mediapipe",
    "opencv-python",
    "pyatv",
    "rokuecp",
    "samsungtvws",
    "sounddevice",
    "zeroconf",
]

[dependency-groups]
dev = [
    "black",
    "mypy",
    "ruff",
]

[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "tests.application.test_application_ports",
    "tests.application.test_gesture_remote_service",
    "tests.infrastructure.test_config_repository",
    "tests.infrastructure.test_mdns",
    "tests.infrastructure.test_tv_remote",
    "tests.infrastructure.test_video_overlay",
    "tests.infrastructure.test_voice_capture",
    "tests.runtime.test_config_server_runner",
    "tests.web.test_config_web",
]
ignore_errors = true
